--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js');
+        navigator.serviceWorker.register('/web/sw.js');
       });
     }
 </script>
