--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
 
-     https://firebase.google.com/docs/web/setup#available-libraries -->
+https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-analytics.js"></script>
 
 <script>
@@ -43,6 +43,8 @@
 <!--   Initialize Firebase-->
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
+
+
 </script>
 <!-- This script installs service_worker.js to provide PWA functionality to
      application. For more information, see:
@@ -53,7 +55,64 @@
         navigator.serviceWorker.register('/web/sw.js');
       });
     }
+    function closeModal(){
+    const myModal = document.querySelector('#myModal');
+    myModal.style.display="none"
+    }
+
 </script>
 <script src="main.dart.js" type="application/javascript"></script>
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+</style>
+
+<div id="myModal" class="modal" style="display:none">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <p>Install detect popup..</p>
+    </div>
+</div>
 </body>
 </html>
