--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
 
     <title>ketshop</title>
     <link rel="manifest" href="manifest.json">
+
+    <style>
+    add-button {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+}
+
+
+    </style>
 </head>
+
 <body>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -55,64 +66,10 @@ https://firebase.google.com/docs/web/setup#available-libraries -->
         navigator.serviceWorker.register('/web/sw.js');
       });
     }
-    function closeModal(){
-    const myModal = document.querySelector('#myModal');
-    myModal.style.display="none"
-    }
+
 
 </script>
 <script src="main.dart.js" type="application/javascript"></script>
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-
-</style>
-
-<div id="myModal" class="modal" style="display:none">
-    <!-- Modal content -->
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <p>Install detect popup..</p>
-    </div>
-</div>
+<button class="add-button">Add to home screen</button>
 </body>
 </html>
